<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.u1660498.studio1assignment.MainActivity"
    android:background="#f8ef23">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:id="@+id/my_image_view"
        android:src="@drawable/leedsfestival"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:contentDescription="" />

    <Button
        android:text="@string/TheEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_TheEvent"
        android:onClick="sendEvent"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/my_image_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Line_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendLineUp"
        android:id="@+id/btn_LineUp"
        android:layout_below="@+id/btn_TheEvent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Tickets"
        android:onClick="sendTickets"
        android:layout_below="@+id/btn_LineUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/btn_Tickets"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/dir"
        android:onClick="sendDir" />

</RelativeLayout>
